8321734: [lworld] C2: flat_in_array type with array type comparisons are not folded